--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 	</div>
 </body>
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js" type="text/javascript"></script>
 <script>
 
 	sideButtonCallback = function() {
