--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					<p>I'm majoring in both computer science and economics for an honorary bachelors of science. I've been a TA for CSC108, and will continue to TA this year in CSC207.</p>
 					<br>
 					<h1>Interests</h1>
-					<p>I like tv and video games lol. I love The Office, Community and Would I Lie to You.</p>
+					<p>I like tv and video games lol. I love The Office, Community and Would I Lie to You. I also like drinking and eating at places I can't afford.</p>
 					<br>
 				</div>
 				<div class='projects content' id='content_projects'>
