--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
 				transform: rotate(var(--headTitlAntiClockEnd));
 			}
 		}
+		
+		@media only screen and (max-width: 1000px) {
+		  #centerEverything {
+		    	width: 100vw;
+		  	}
+		}
 
 	</style>
 
