--- a/test2048.html
+++ b/test2048.html
@@ -41,7 +41,7 @@
 		font-size: 50px;
 		/*transition: left 2s, top 2s;*/
 		text-align: center;
-		transition: left 0.5s, top 0.5s;
+		transition: left 0.5s, top 0.5s, background-color 0.5s;
 		animation: fadein 0.5s ease-in;
 	}
 
