--- a/index.html
+++ b/index.html
@@ -389,10 +389,13 @@
 					<br>
 				</div>
 				<div class='projects content' id='content_projects'>
-					<div style='display:flex; justify-content:center'>
-						<iframe frameborder='1' width='500px' height='500px' src='https://www.github.com/peggalex'></iframe>
-					</div>
-				</div>
+					<h1>2048 Game</h1>
+					<a href="https://peggalex.github.io/test2048" target="_blank">https://peggalex.github.io/test2048</a>
+					<br>
+					<br>
+					<h1>Other</h1>
+					<a href="https://github.com/peggalex" target="_blank">https://github.com/peggalex</a>
+
 				<div class='contact content' id='content_contact'>
 					<h1>Email</h1>
 					<a href='mailto:alex.pegg@mail.utoronto.ca'>alex.pegg@mail.utoronto.ca</a>
