--- a/test2048.html
+++ b/test2048.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<meta charset="utf-8"/> <!-- firefox throws an error without this -->
 	<style>
 	:root {
 		--animeTime: 0.5s;
