adding in new grade calc

--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
 					<p>I was born and raised in Hong Kong by my British dad and my Filipino mum.</p>
 					<br>
 					<h1>School</h1>
-					<p>I'm majoring in both computer science and economics for an honorary bachelors of science. I've been a TA for CSC108, and will continue to TA this year in CSC207.</p>
+					<p>I'm majoring in both computer science and economics for an honorary bachelors of science. I've been a TA for CSC108, and it's all downhill from here</p>
 					<br>
 					<h1>Interests</h1>
 					<p>I like tv and video games. I love The Office, Community and Would I Lie to You. I also like drinking and eating at places I can't afford.</p>
@@ -391,6 +391,10 @@
 				<div class='projects content' id='content_projects'>
 					<h1>2048 Game</h1>
 					<a href="https://peggalex.github.io/test2048" target="_blank">https://peggalex.github.io/test2048</a>
+					<br>
+					<br>
+					<h1>Simple grade calculator</h1>
+					<a href="https://peggalex.github.io/rachel.html" target="_blank">"https://peggalex.github.io/rachel.html"</a>
 					<br>
 					<br>
 					<h1>Other</h1>
