--- a/rachel.html
+++ b/rachel.html
@@ -242,10 +242,10 @@
 	</div>
 	<div id='footer' class='row centered'>
 		<p>
-			inspiration by <a href='http://www.benegg.net/grade_calculator.html'>ben egg</a>
+			inspiration by <a href='http://www.benegg.net/grade_calculator.html' target="_blank">ben egg</a>
 		</p>
 		<p>
-			| designed by <a href='https://peggalex.github.io'>alex pegg</a> | © all rights reserved
+			| designed by <a href='https://peggalex.github.io' target="_blank">alex pegg</a> | © all rights reserved
 		</p>
 	</div>
 </body>
