--- a/rachel.html
+++ b/rachel.html
@@ -3,7 +3,7 @@
 
 <head>
 
-	<title>~Rachel~</title>
+	<title>Grade Calc</title>
 	<link href="https://fonts.googleapis.com/css?family=Oxygen:300&display=swap" rel="stylesheet">
 
 	<style>
@@ -201,6 +201,9 @@
 			margin-right: 10px;
 		}
 
+		#imStuff {
+			margin-top: 10px;
+		}
 
 
 	}
