--- a/rachel.html
+++ b/rachel.html
@@ -3,6 +3,7 @@
 
 <head>
 
+	<meta name="google" content="notranslate">
 	<title>Grade Calc</title>
 	<link href="https://fonts.googleapis.com/css?family=Oxygen:300&display=swap" rel="stylesheet">
 
