--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 					<br>
 					<br>
 					<h1>Simple grade calculator</h1>
-					<a href="https://peggalex.github.io/rachel.html" target="_blank">"https://peggalex.github.io/rachel.html"</a>
+					<a href="https://peggalex.github.io/rachel.html" target="_blank">https://peggalex.github.io/rachel.html</a>
 					<br>
 					<br>
 					<h1>Other</h1>
