--- a/rachel.html
+++ b/rachel.html
@@ -54,6 +54,7 @@
 			margin-left: 10px;
 			transition: opacity 0.5s ease-out;
 			font-size: 15px;
+			outline: none;
 		}
 
 		.deleteButton::after {
@@ -70,6 +71,7 @@
 			margin-left: 10px;
 			transition: opacity 0.5s ease-out;
 			font-size: 15px;
+			outline: none;
 		}
 
 		.addButton::after {
@@ -127,7 +129,7 @@
 			height: 0px;
 			border-bottom: solid;
 			border-color: lightblue;
-			animation: expand 1s 0.25s ease-out forwards;
+			animation: expand 1s 0.5s ease-out forwards;
 		}
 
 		.deleteButton:hover {
